--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -34,11 +34,11 @@ $font-medium: 500;
 $letter-spacing-md: -2px;
 $letter-spacing-lg: -3px;
 $letter-spacing-xl: -4%;
-$letter-spacing-xxl: -6%;
+$letter-spacing-xxl: -0.06em;
 
 // Spacing
-$spacing-2: 8px;
-$spacing-4: 16px;
-$spacing-6: 24px;
-$spacing-8: 32px;
-$spacing-10: 40px;
+$spacing-2: 0.5rem;
+$spacing-4: 1rem;
+$spacing-6: 1.5rem;
+$spacing-8: 2rem;
+$spacing-10: 2.5rem;
